feat: add project link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							Projects
 						</h2>
 						<ul>
-							<li><a href="#" target="_blank">My CV project for RS school</a></li>
+							<li><a href="https://bolbass.github.io/rsschool-cv/" target="_blank">My CV project for RS school</a></li>
 						</ul>
 					</section>
 				</main>
